--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
 		<title>CSI Front End Development</title>
 	</head>
 	<body>
-		<div id="header"></div>
-		<div id="container"> </div>
+		<div id="header">
+			<div class="navigation">
+				<div class="logo">
+					logo
+				</div>
+			</div>
+		</div>
+		<div id="section-main">
+			<div class="main-container">123</div>
+		</div>
+		<div id="container">
+
+		</div>
 	</body>
 </html>
