--- a/index.html
+++ b/index.html
@@ -2,24 +2,16 @@
 <html>
 	<head>
 		<meta charset='utf-8'>
-		<link rel="stylesheet/less" type="text/css"  href="css/style.less">
+		<link rel="stylesheet/less" type="text/css"  href="css/style.css">
 		<script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
 		<script type="text/javascript" src="js/less.js"></script>
 		<title>CSI Front End Development</title>
 	</head>
 	<body>
-		<div id="header">
-			<div class="navigation">
-				<div class="logo">
-					logo
-				</div>
-			</div>
-		</div>
-		<div id="section-main">
-			<div class="main-container">123</div>
-		</div>
-		<div id="container">
+		<div id="csi-container">
+			<div id="csi-header">
 
+			</div>
 		</div>
 	</body>
 </html>
