--- a/index.html
+++ b/index.html
@@ -10,8 +10,35 @@
 	<body>
 		<div id="csi-container">
 			<div id="csi-header">
+				<div class="top-header">
+					<div id="logo">
+						ini Logos
+					</div>
+				</div>
 
 			</div>
+
+			<!---Header End-->
+
+			<div id="csi-slide">
+				<div class="container-slide">
+					<h2>Manage Your Curiculum Online</h2>
+					<img src="img/fleetio-screenshots.jpg" />
+				</div>
+			</div>
+			<div id="csi-main">
+				<div class="main-content">
+					<div class="full-width">
+						<div class="csi_text">
+							<h2>Lorem Ipsum adalah contoh teks atau dummy dalam industri penataan huruf atau typesetting</h2>
+						</div>
+						<div class="csi-button-cta">
+							<a href="#" class="csi-cta">Get Started For Free</a>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
+
 	</body>
 </html>
