--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
 					<div id="logo">
 						ini Logos
 					</div>
+					<div id="logo">
+						ini Logos
+					</div>
+					<div id="logo">
+						ini Logos
+					</div>
 				</div>
 
 			</div>
